# exemple_gRPC_server

./: .env.exemple  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  grpc_server_update_token.py  grps_server.py  pyproject.toml
grps_serviser/: auth_grpc_servicer.py  film_serviser.py
migrations/models/: 1_20240423101032_test_migr1.py  2_20240425124918_add_User_role.py
src/: main.py
src/config/: db_connect.py  settings.py
src/dao/: user_dao.py
src/models/: __init__.py  user_models.py
src/schemas/: auth_schema.py  user_schemas.py
src/services/: auth_services.py  user_services.py
src/views/: auth_view.py  user_view.py
ssl/: readme.txt
